--- a/app/templates/tickets/tickets.html
+++ b/app/templates/tickets/tickets.html
@@ -5,6 +5,7 @@
 
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/tickets.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/tickets.css') }}" type="text/css">
 {% endblock %}
 
 {% block content %}
